[update] with border class and text color classes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,15 @@
 .grey {
 	background-color: #ebedf0;
 }
+
+.text_danger {
+	color: #FF5C4C;
+}
+
+.text_success {
+	color: #55CD97;
+}
+
+.borderRight {
+	border-right-width: 1px !important;
+}
