--- a/src/styles/_userCart.scss
+++ b/src/styles/_userCart.scss
@@ -2,16 +2,28 @@
 	.webix_template {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 		.avatarImg {
-			flex-grow: 1;
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: contain;
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+			margin-bottom: 12px;
 		}
 
 		.avatarContent {
 			text-align: center;
-			margin:2px 0px;
+			font-weight: 500;
+			margin: 4px 0px;
 		}
+
+		.userName {
+			font-size: 16px;
+			line-height: 20px;
+		}
+
+
 	}
 }
