--- a/src/styles/_cartList.scss
+++ b/src/styles/_cartList.scss
@@ -3,9 +3,16 @@
 	.webix_dataview_item {
 		&, &.webix_selected {
 			background-image: none;
-			padding: 30px 30px;
+			padding: 10px 10px 0 0;
 			background-color:transparent;
 			border-color: transparent;
+
+		}
+
+		&:nth-of-type(3n + 1) {
+			&, &.webix_selected {
+				padding-left: 10px;
+			}
 		}
 
 		&.webix_selected {
@@ -15,21 +22,26 @@
 		}
 
 		.overall {
+			display: flex;
 			padding: 10px;
 			background-color: #fff;
 			position: relative;
-			box-shadow: 0px 1px 1px #d4d7de;
 			height: 100%;
+			border: 1px solid #DADEE0;
+			box-sizing: border-box;
+
+			&_left {
+				margin-right: 12px;
+			}
 
 			.itemImg {
 				box-sizing: border-box;
-				width: 100px;
-				height: 100px;
-				border-radius: 50%;
+				width: 168px;
+				height: 168px;
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: cover;
-				margin-bottom: 10px;
+				margin-bottom: 6px;
 			}
 
 			.edit_item {
