--- a/src/styles/_cartList.scss
+++ b/src/styles/_cartList.scss
@@ -2,10 +2,11 @@
 	background-color: transparent;
 	.webix_dataview_item {
 		&, &.webix_selected {
-			background-image: none;
-			padding: 30px 30px;
 			background-color:transparent;
 			border-color: transparent;
+		}
+		.webix_dataview_inner_item {
+			padding:2px 2px;
 		}
 
 		&.webix_selected {
@@ -15,31 +16,35 @@
 		}
 
 		.overall {
-			padding: 10px;
+			display:flex;
+			padding: 16px;
 			background-color: #fff;
 			position: relative;
-			box-shadow: 0px 1px 1px #d4d7de;
+			border: 1px solid #DADEE0;
+			box-sizing: border-box;
 			height: 100%;
+
+			&_left {
+				margin-right: 12px;
+			}
 
 			.itemImg {
 				box-sizing: border-box;
-				width: 100px;
-				height: 100px;
-				border-radius: 50%;
+				width: 168px;
+				height: 168px;
 				background-position: center;
 				background-repeat: no-repeat;
 				background-size: cover;
-				margin-bottom: 10px;
+				margin-bottom: 6px;
 			}
 
 			.edit_item {
 				position: absolute;
-				top: 5px;
-				right: 10px;
-				padding-left: 10px;
+				top: 16px;
+				right: 16px;
 				> i {
 					color: #AAA;
-					font-size: 14px;
+					font-size: 20px;
 				}
 	
 				&:hover {
